Fix autoclosing HTML tags

--- a/settings.json
+++ b/settings.json
@@ -75,5 +75,24 @@
     "extensions.ignoreRecommendations": false,
     "editor.wordWrap": "on",
     "json.format.enable": false,
-    "editor.autoIndent": false,
+    "editor.autoIndent": false,"auto-close-tag.activationOnLanguage": [
+        "xml",
+        "php",
+        "blade",
+        "ejs",
+        "jinja",
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact",
+        "plaintext",
+        "markdown",
+        "vue",
+        "liquid",
+        "erb",
+        "lang-cfml",
+        "cfml",
+        "html",
+        "twig"
+    ],
 }
