Update JSON theme

--- a/settings.json
+++ b/settings.json
@@ -16,7 +16,8 @@
         ".exports": "shellscript",
         ".vimrc": "shellscript",
         ".extras": "shellscript",
-        ".aliases": "shellscript"
+        ".aliases": "shellscript",
+        "*.json": "jsonc"
     },
     "workbench.colorCustomizations": {
         "activityBarBadge.background": "#2979FF",
