Change title bar colour

--- a/settings.json
+++ b/settings.json
@@ -38,7 +38,7 @@
         "sideBar.background": "#1e272c",
         "editorGroupHeader.tabsBackground": "#1e272c",
         "tab.activeBackground": "#162228",
-        "titleBar.activeBackground": "#2979ff",
+        "titleBar.activeBackground": "#8711f7",
         "titleBar.activeForeground": "#fff",
         "tab.inactiveBackground": "#1e272c",
         "tab.border": "#162228",
