--- a/settings.json
+++ b/settings.json
@@ -45,7 +45,8 @@
         "statusBar.foreground": "#5c7b90",
         "input.background": "#263238",
         "sideBarSectionHeader.background": "#263238",
-        "editorWidget.background": "#263238"
+        "editorWidget.background": "#263238",
+        "editorIndentGuide.background": "#333"
     },
     "workbench.iconTheme": "eq-material-theme-icons",
     "editor.smoothScrolling": true,
@@ -102,5 +103,9 @@
     "window.openFilesInNewWindow": "off",
     "editor.scrollBeyondLastLine": true,
     "editor.tabSize": 2,
-    "files.trimTrailingWhitespace": true
+    "files.trimTrailingWhitespace": true,
+    "files.exclude": {
+        "**/.git": false,
+        "**/.gittttt": true
+    }
 }
