--- a/settings.json
+++ b/settings.json
@@ -24,7 +24,7 @@
         "button.background": "#2979FF",
         "button.foreground": "#fff",
         "badge.background": "#a5fc03",
-        "badge.foreground": "#19282F",
+        "badge.foreground": "#16202B",
         "list.highlightForeground": "#2979FF",
         "scrollbarSlider.activeBackground": "#2979FF50",
         "editorSuggestWidget.highlightForeground": "#2979FF",
@@ -32,22 +32,22 @@
         "progressBar.background": "#2979FF",
         "pickerGroup.foreground": "#2979FF",
         "tab.activeBorder": "#a349f9",
-        "activityBar.background": "#19282F",
-        "sideBar.background": "#19282F",
-        "editorGroupHeader.tabsBackground": "#19282F",
+        "activityBar.background": "#16202B",
+        "sideBar.background": "#16202B",
+        "editorGroupHeader.tabsBackground": "#16202B",
         "tab.activeBackground": "#162228",
         "titleBar.activeBackground": "#8711f7",
         "titleBar.activeForeground": "#fff",
-        "tab.inactiveBackground": "#19282F",
+        "tab.inactiveBackground": "#16202B",
         "tab.border": "#162228",
         "editorGroupHeader.tabsBorder": "#162228",
-        "statusBar.background": "#19282F",
+        "statusBar.background": "#16202B",
         "statusBar.foreground": "#5c7b90",
         "input.background": "#263238",
         "sideBarSectionHeader.background": "#263238",
         "editorWidget.background": "#263238",
         "editorIndentGuide.background": "#333",
-        "editor.background": "#19282F"
+        "editor.background": "#16202B"
     },
     "editor.smoothScrolling": true,
     "window.zoomLevel": 0,
@@ -79,7 +79,7 @@
         "html",
         "twig"
     ],
-    "workbench.colorTheme": "ArkBright",
+    "workbench.colorTheme": "kaleidoscope",
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
