--- a/extensions/adhamu.history-in-sublime-merge-1.2.3/package.json
+++ b/extensions/adhamu.history-in-sublime-merge-1.2.3/package.json
@@ -2,7 +2,7 @@
 	"name": "history-in-sublime-merge",
 	"displayName": "History in Sublime Merge",
 	"description": "Open files in Sublime Merge",
-	"version": "1.2.2",
+	"version": "1.2.3",
 	"publisher": "adhamu",
 	"repository": "https://github.com/adhamu/history-in-sublime-merge.git",
 	"engines": {
@@ -35,7 +35,7 @@
 			},
 			{
 				"command": "history-in-sublime-merge.blameFile",
-				"title": "Blame file in Sublime Merge",
+				"title": "Blame File in Sublime Merge",
 				"category": "Sublime Merge"
 			}
 		],
